gccida/c2/thread_prologue_and_epilogue_insns
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8062:4: error: expected ';' after expression
rtx m; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8062:5: error: use of undeclared identifier 'm'
rtx m; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8064:4: error: expected ';' after expression
rtx v42; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8064:5: error: use of undeclared identifier 'v42'
rtx v42; // r14 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8070:4: error: expected ';' after expression
rtx v48; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8070:5: error: use of undeclared identifier 'v48'
rtx v48; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8076:4: error: expected ';' after expression
rtx v54; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8076:5: error: use of undeclared identifier 'v54'
rtx v54; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8098:4: error: expected ';' after expression
rtx v76; // rdi 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8098:5: error: use of undeclared identifier 'v76'
rtx v76; // rdi 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8099:4: error: expected ';' after expression
rtx v77; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8099:5: error: use of undeclared identifier 'v77'
rtx v77; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8100:4: error: expected ';' after expression
rtx v78; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8100:5: error: use of undeclared identifier 'v78'
rtx v78; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8110:4: error: expected ';' after expression
rtx v88; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8110:5: error: use of undeclared identifier 'v88'
rtx v88; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8116:4: error: expected ';' after expression
rtx v94; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8116:5: error: use of undeclared identifier 'v94'
rtx v94; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/function.c:8123:4: error: expected ';' after expression
rtx to; // [rsp+0h] [rbp-A8h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/thread_prologue_and_epilogue_insns/src/obj/function.o] Error 1
